@@ -5,15 +5,15 @@ Index: webkitgtk/Source/WTF/wtf/CMakeLists.txt
 ===================================================================
 --- webkitgtk.orig/Source/WTF/wtf/CMakeLists.txt
 +++ webkitgtk/Source/WTF/wtf/CMakeLists.txt
-@@ -173,7 +173,6 @@ set(WTF_HEADERS
+@@ -179,7 +179,6 @@ set(WTF_HEADERS
  
  set(WTF_SOURCES
      Assertions.cpp
 -    Atomics.cpp
      AutomaticThread.cpp
      BitVector.cpp
-     CompilationThread.cpp
-@@ -279,6 +278,16 @@ if (NOT USE_SYSTEM_MALLOC)
+     ClockType.cpp
+@@ -290,6 +289,16 @@ if (NOT USE_SYSTEM_MALLOC)
      list(APPEND WTF_LIBRARIES bmalloc)
  endif ()
  
